[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Actors/Ball.gd" type="Script" id=1]
[ext_resource path="res://Assets/PlayerItems/MetalBall.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/BallBSM.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 2.0
absorbent = true

[sub_resource type="CircleShape2D" id=2]
radius = 11.9861

[sub_resource type="CircleShape2D" id=3]
radius = 1.00204

[sub_resource type="Animation" id=4]
resource_name = "disappear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.435275, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.298039 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Ball" type="RigidBody2D" groups=["Ball"]]
z_index = 3
mass = 10.0
physics_material_override = SubResource( 1 )
gravity_scale = 20.0
sleeping = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HoleDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoleDetector"]
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="HoleDetector"]
playback_process_mode = 0

[node name="BasicStateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/disappear = SubResource( 4 )
anims/idle = SubResource( 5 )

[connection signal="tween_completed" from="HoleDetector/Tween" to="." method="_on_Tween_completed"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_second_Tween_completed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]
